src/app/home/home.component.scss
.nav {
  padding-top: 15px;
  margin: 0em -1.5em auto;
}

h1 {
  padding-top: 1em;
}

h2 {
  padding: 30px;
}

.body {
  display: block;
  text-align: center;
  margin: auto;
  max-width: 800px;
}

.table-align {
  //width: 90%;
  //margin-right: 2em auto;
  height: 3em;
  margin: 0 3em -2em;
}

.createButton {
  //display: flex;
  //justify-content: flex-end;
  //width: 5em;
  float: right;
}

.logoutButton {
  position: absolute;
  top: 0;
  right: 0;
  //display: flex;
  //justify-content: right;
  //align-items: right;
}

/* RESPONSIVE TABLE CSS */
table {
  border: 1px solid #000;
  width: 90%;
  margin: 2em auto;
  border-collapse: collapse;
  /* font-family: "Titillium Web", sans-serif; */
}

caption {
  margin: 0.5em;
  font-weight: 700;
  font-size: 1.25em;
}
thead,
th {
  background-color:darkolivegreen;
  color: #fff;
  border: 2px solid #fff;
  padding: 0.6em;
}

tr {
  vertical-align: top;
}

tr:nth-child(even) {
  background-color: rgba(198, 210, 255, 0.898);
}

td {
  border: 1px solid #000;
  padding: 0.5em;
  vertical-align: middle;
}
.td-listing {
  text-align:left;
  margin: 1em;
  padding: 0;
}
ul.movies {
  list-style-type: none;
  text-align: left;
  margin: 1em;
  padding: 0;
}

ul.movies li::before {
  content: "- ";
}

ul.no-bullets {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

/* TABLE CSS FOR SMALLER SCREENS */
@media all and (max-width: 850px) {
  table,
  thead,
  tbody,
  th,
  td,
  tr,
  caption {
    display: block;
    border: 0px;
  }

  table {
    border-collapse: collapse;
  }

  table.client {
    width: 90%;
  }

  thead {
    display: none;
  }

  tr {
    border: 2px solid rgba(0, 8, 8, 0);
  }

  td {
    border: 1px solid #000;
    position: relative;
    text-align: center;
    padding-left: 90px;
  }

  td::before {
    position: absolute;
    left: 6px;
    width: 45%;
    padding-right: 10px;
    white-space: nowrap;
    text-align: left;
  }

  td:nth-of-type(1):before {
    content: "Event Date:";
  }

  td:nth-of-type(2):before {
    content: "Movies:";
  }

  td:nth-of-type(3):before {
    content: "Invite Guests:";
  }

  td:nth-of-type(4):before {
    content: "Votes Submitted:";
  }
  td:nth-of-type(5):before {
    content: "Delete Event:";
  }
}

